// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  class="selector"
  data-testid="choice-selector"
>
  <div
    class="label"
  >
    Add to 2 ability scores
  </div>
  <div
    class="select-div"
  >
    <div
      class="list-box-and-error-container"
      data-testid="select"
    >
      <div
        aria-labelledby="select-label"
        class="list-box-container"
        style="font-size: 1.2rem;"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="button"
          data-testid="select-button"
          type="button"
        >
          —
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <ul
          aria-activedescendant="—"
          class="list"
          data-testid="select-list"
          role="listbox"
          style="display: none;"
          tabindex="-1"
        >
          <li
            aria-selected="true"
            class="item selected"
            data-testid="data-blank"
            role="option"
            tabindex="0"
          >
            —
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-dex"
            role="option"
            tabindex="0"
          >
            +1 
				Dexterity
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-str"
            role="option"
            tabindex="0"
          >
            +2 
				Strength
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-wis"
            role="option"
            tabindex="0"
          >
            +1 
				Wisdom
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-int"
            role="option"
            tabindex="0"
          >
            +2 
				Intelligence
          </li>
        </ul>
      </div>
    </div>
    <div
      class="list-box-and-error-container"
      data-testid="select"
    >
      <div
        aria-labelledby="select-label"
        class="list-box-container"
        style="font-size: 1.2rem;"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="button"
          data-testid="select-button"
          type="button"
        >
          —
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <ul
          aria-activedescendant="—"
          class="list"
          data-testid="select-list"
          role="listbox"
          style="display: none;"
          tabindex="-1"
        >
          <li
            aria-selected="true"
            class="item selected"
            data-testid="data-blank"
            role="option"
            tabindex="0"
          >
            —
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-dex"
            role="option"
            tabindex="0"
          >
            +1 
				Dexterity
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-str"
            role="option"
            tabindex="0"
          >
            +2 
				Strength
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-wis"
            role="option"
            tabindex="0"
          >
            +1 
				Wisdom
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-int"
            role="option"
            tabindex="0"
          >
            +2 
				Intelligence
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    class="button-div"
  >
    <button
      class="button negative"
      style="font-size: 1.3rem; padding: 1rem; margin: 0.25rem;"
      type="button"
    >
      Reset
    </button>
  </div>
</div>
`;

exports[`renders correctly 2`] = `
<div
  class="selector"
  data-testid="choice-selector"
>
  <div
    class="label"
  >
    Add +1 to 2 ability scores
  </div>
  <div
    class="select-div"
  >
    <div
      class="list-box-and-error-container"
      data-testid="select"
    >
      <div
        aria-labelledby="select-label"
        class="list-box-container"
        style="font-size: 1.2rem;"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="button"
          data-testid="select-button"
          type="button"
        >
          —
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <ul
          aria-activedescendant="—"
          class="list"
          data-testid="select-list"
          role="listbox"
          style="display: none;"
          tabindex="-1"
        >
          <li
            aria-selected="true"
            class="item selected"
            data-testid="data-blank"
            role="option"
            tabindex="0"
          >
            —
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-dex"
            role="option"
            tabindex="0"
          >
            
				Dexterity
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-str"
            role="option"
            tabindex="0"
          >
            
				Strength
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-wis"
            role="option"
            tabindex="0"
          >
            
				Wisdom
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-int"
            role="option"
            tabindex="0"
          >
            
				Intelligence
          </li>
        </ul>
      </div>
    </div>
    <div
      class="list-box-and-error-container"
      data-testid="select"
    >
      <div
        aria-labelledby="select-label"
        class="list-box-container"
        style="font-size: 1.2rem;"
      >
        <button
          aria-expanded="false"
          aria-haspopup="listbox"
          class="button"
          data-testid="select-button"
          type="button"
        >
          —
          <svg
            aria-hidden="true"
            class="icon"
            fill="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <ul
          aria-activedescendant="—"
          class="list"
          data-testid="select-list"
          role="listbox"
          style="display: none;"
          tabindex="-1"
        >
          <li
            aria-selected="true"
            class="item selected"
            data-testid="data-blank"
            role="option"
            tabindex="0"
          >
            —
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-dex"
            role="option"
            tabindex="0"
          >
            
				Dexterity
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-str"
            role="option"
            tabindex="0"
          >
            
				Strength
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-wis"
            role="option"
            tabindex="0"
          >
            
				Wisdom
          </li>
          <li
            aria-selected="false"
            class="item"
            data-testid="data-int"
            role="option"
            tabindex="0"
          >
            
				Intelligence
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    class="button-div"
  >
    <button
      class="button negative"
      style="font-size: 1.3rem; padding: 1rem; margin: 0.25rem;"
      type="button"
    >
      Reset
    </button>
  </div>
</div>
`;
